# eztui

./: .gitignore  Cargo.toml  README.md
examples/: hello_world.rs
examples/typer/: Cargo.toml
examples/typer/src/: main.rs
src/: application.rs  column.rs  command.rs  element.rs  key.rs  lib.rs  row.rs  text.rs  text_input.rs  widget.rs
