[package]
name = "eztui"
version = "0.0.1"
authors = ["cowboy8625 <https://github.com/cowboy8625>"]
edition = "2018"
description = "Bare Bones TUI with crossterm's as back end."
readme = "README.md"
repository = "https://github.com/cowboy8625/eztui"
license = "Apache-2.0"
keywords = ["tui", "terminal", "dashboard", "cli", "color"]
categories = ["Command line utilities"]

[dependencies]
buffy = { branch = "main", git = "https://github.com/cowboy8625/buffy" }
crossterm = "0.18.2"

